--- a/IngenieriaSoftware/nbproject/project.properties
+++ b/IngenieriaSoftware/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ingenieriasoftware.IngenieriaSoftware
+main.class=ingenieriasoftware.JFramePrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
